2000-11-29  Alexander Larsson  <alexl@redhat.com>

	* gdk/linux-fb/gdkinput-ps2.c (send_button_event):
	Do implicit button grabs, even if the window doesn't
	want the event.
	(gdk_fb_window_send_crossing_events): If there is a
	grab, only the grabbed window gets normal enter/leave
	notifications. On ungrab go from grabbed window to current.
	Don't send any notification to b when propagating from c -> b.
	If setting a grab on window, don't set prev_window.
	(handle_mouse_input): Send enter/leave events to the window the
	mouse is over, not the grabbed one.
	
2000-11-28  Elliot Lee  <sopwith@redhat.com>

	* gdk/gdkregion-generic.c: Zap warning.
	* modules/input/Makefile.am: Only build im-xim if USE_X11 is enabled
	* gtk/gtkrc.c: s/strcpy/memcpy/ to save a few nanoseconds.

2000-11-28  Alexander Larsson  <alla@lysator.liu.se>

	* gdk/linux-fb/gdkwindow-fb.c (gdk_fb_window_move_resize):
	The cursor should be hidden if it is part of either the
	source or destination region. Not only if it is in both.
	(gdk_window_set_transient_for): Silence warnings.

2000-11-28  Alexander Larsson  <alexl@redhat.com>

	* gdk/linux-fb/mifillarc.c (miFillArcSliceSetup):
	The default mode in X is Pie Arcs, therefore that is
	what Gtk+ uses.

2000-11-28  Alexander Larsson  <alexl@redhat.com>

	* gdk/linux-fb/gdkinput-ps2.c:
	Implement correct EnterNotify/LeaveNotify:
	(gdk_fb_window_send_crossing_events): New function that sends
	all GdkCrossingEvents from the last mouse-window to the specified
	destination.
	(gdk_fb_window_visibility_crossing): Removed function.
	(handle_mouse_input): Use gdk_fb_window_send_crossing_events()
	(send_button_event, gdk_fb_cursor_reset): Use gdk_window_at_pointer
	instead of gdk_window_get_pointer() for	better readability.

	* gdk/linux-fb/gdkmain-fb.c (gdk_fb_pointer_grab,
	gdk_fb_pointer_ungrab): Use gdk_fb_window_send_crossing_events.

	* gdk/linux-fb/gdkprivate-fb.h:
	removed gdk_fb_window_visibility_crossing, added